src/include/rados/librados.h

typedef void *rados_t;
typedef void *rados_ioctx_t;
typedef uint64_t rados_snap_t;
typedef void *rados_omap_iter_t;
typedef void *rados_write_op_t;
typedef void *rados_read_op_t;
typedef void *rados_completion_t;
CEPH_RADOS_API int64_t rados_ioctx_get_id(rados_ioctx_t io);
CEPH_RADOS_API int rados_ioctx_get_pool_name(rados_ioctx_t io, char *buf,
                                             unsigned maxlen);
CEPH_RADOS_API int rados_ioctx_snap_create(rados_ioctx_t io,
                                           const char *snapname);
CEPH_RADOS_API int rados_ioctx_snap_remove(rados_ioctx_t io,
                                           const char *snapname);
CEPH_RADOS_API int rados_ioctx_snap_rollback(rados_ioctx_t io, const char *oid,
		                             const char *snapname);
CEPH_RADOS_API void rados_ioctx_snap_set_read(rados_ioctx_t io,
                                              rados_snap_t snap);
CEPH_RADOS_API int rados_ioctx_selfmanaged_snap_create(rados_ioctx_t io,
                                                       rados_snap_t *snapid);
CEPH_RADOS_API int rados_ioctx_selfmanaged_snap_remove(rados_ioctx_t io,
                                                       rados_snap_t snapid);
CEPH_RADOS_API int rados_ioctx_selfmanaged_snap_rollback(rados_ioctx_t io,
                                                         const char *oid,
                                                         rados_snap_t snapid);
CEPH_RADOS_API int rados_ioctx_selfmanaged_snap_set_write_ctx(rados_ioctx_t io,
                                                              rados_snap_t seq,
                                                              rados_snap_t *snaps,
                                                              int num_snaps);
CEPH_RADOS_API int rados_ioctx_snap_list(rados_ioctx_t io, rados_snap_t *snaps,
                                         int maxlen);
CEPH_RADOS_API int rados_ioctx_snap_lookup(rados_ioctx_t io, const char *name,
                                           rados_snap_t *id);
CEPH_RADOS_API int rados_ioctx_snap_get_name(rados_ioctx_t io, rados_snap_t id,
                                             char *name, int maxlen);
CEPH_RADOS_API int rados_ioctx_snap_get_stamp(rados_ioctx_t io, rados_snap_t id,
                                              time_t *t);
CEPH_RADOS_API int rados_omap_get_next(rados_omap_iter_t iter,
                                       char **key,
                                       char **val,
                                       size_t *len);
CEPH_RADOS_API void rados_omap_get_end(rados_omap_iter_t iter);
CEPH_RADOS_API int rados_exec(rados_ioctx_t io, const char *oid,
                              const char *cls, const char *method,
	                      const char *in_buf, size_t in_len, char *buf,
                              size_t out_len);
typedef void (*rados_callback_t)(rados_completion_t cb, void *arg);
CEPH_RADOS_API int rados_aio_create_completion2(void *cb_arg,
						rados_callback_t cb_complete,
						rados_completion_t *pc);
CEPH_RADOS_API int rados_aio_wait_for_complete(rados_completion_t c);
CEPH_RADOS_API int rados_aio_is_complete(rados_completion_t c);
CEPH_RADOS_API int rados_aio_wait_for_complete_and_cb(rados_completion_t c);
CEPH_RADOS_API int rados_aio_get_return_value(rados_completion_t c);
CEPH_RADOS_API void rados_aio_release(rados_completion_t c);
CEPH_RADOS_API int rados_aio_write(rados_ioctx_t io, const char *oid,
		                   rados_completion_t completion,
		                   const char *buf, size_t len, uint64_t off);
CEPH_RADOS_API int rados_aio_append(rados_ioctx_t io, const char *oid,
		                    rados_completion_t completion,
		                    const char *buf, size_t len);
CEPH_RADOS_API int rados_aio_write_full(rados_ioctx_t io, const char *oid,
			                rados_completion_t completion,
			                const char *buf, size_t len);
CEPH_RADOS_API int rados_aio_writesame(rados_ioctx_t io, const char *oid,
			               rados_completion_t completion,
			               const char *buf, size_t data_len,
				       size_t write_len, uint64_t off);
CEPH_RADOS_API int rados_aio_remove(rados_ioctx_t io, const char *oid,
		                    rados_completion_t completion);
CEPH_RADOS_API int rados_aio_read(rados_ioctx_t io, const char *oid,
		                  rados_completion_t completion,
		                  char *buf, size_t len, uint64_t off);
CEPH_RADOS_API int rados_aio_flush(rados_ioctx_t io);
CEPH_RADOS_API int rados_aio_stat(rados_ioctx_t io, const char *o,
		                  rados_completion_t completion,
		                  uint64_t *psize, time_t *pmtime);
CEPH_RADOS_API int rados_aio_cmpext(rados_ioctx_t io, const char *o,
                                    rados_completion_t completion,
                                    const char *cmp_buf,
                                    size_t cmp_len,
                                    uint64_t off);
CEPH_RADOS_API int rados_aio_exec(rados_ioctx_t io, const char *o,
				  rados_completion_t completion,
				  const char *cls, const char *method,
				  const char *in_buf, size_t in_len,
				  char *buf, size_t out_len);
CEPH_RADOS_API int rados_aio_setxattr(rados_ioctx_t io, const char *o,
				      rados_completion_t completion,
				      const char *name, const char *buf,
				      size_t len);
CEPH_RADOS_API int rados_aio_rmxattr(rados_ioctx_t io, const char *o,
				     rados_completion_t completion,
				     const char *name);
typedef void (*rados_watchcb2_t)(void *arg,
				 uint64_t notify_id,
				 uint64_t handle,
				 uint64_t notifier_id,
				 void *data,
				 size_t data_len);
  typedef void (*rados_watcherrcb_t)(void *pre, uint64_t cookie, int err);
CEPH_RADOS_API int rados_watch3(rados_ioctx_t io, const char *o, uint64_t *cookie,
        rados_watchcb2_t watchcb,
        rados_watcherrcb_t watcherrcb,
        uint32_t timeout,
        void *arg);
CEPH_RADOS_API int rados_watch_check(rados_ioctx_t io, uint64_t cookie);
CEPH_RADOS_API int rados_unwatch2(rados_ioctx_t io, uint64_t cookie);
CEPH_RADOS_API int rados_aio_notify(rados_ioctx_t io, const char *o,
				    rados_completion_t completion,
				    const char *buf, int buf_len,
				    uint64_t timeout_ms, char **reply_buffer,
				    size_t *reply_buffer_len);
CEPH_RADOS_API int rados_notify2(rados_ioctx_t io, const char *o,
				 const char *buf, int buf_len,
				 uint64_t timeout_ms,
				 char **reply_buffer, size_t *reply_buffer_len);
CEPH_RADOS_API int rados_decode_notify_response(char *reply_buffer, size_t reply_buffer_len,
                                                struct notify_ack_t **acks, size_t *nr_acks,
                                                struct notify_timeout_t **timeouts, size_t *nr_timeouts);
CEPH_RADOS_API void rados_free_notify_response(struct notify_ack_t *acks, size_t nr_acks,
                                               struct notify_timeout_t *timeouts);
CEPH_RADOS_API int rados_notify_ack(rados_ioctx_t io, const char *o,
				    uint64_t notify_id, uint64_t cookie,
				    const char *buf, int buf_len);
CEPH_RADOS_API int rados_watch_flush(rados_t cluster);
CEPH_RADOS_API rados_write_op_t rados_create_write_op(void);
CEPH_RADOS_API void rados_release_write_op(rados_write_op_t write_op);
CEPH_RADOS_API void rados_write_op_set_flags(rados_write_op_t write_op,
                                             int flags);
CEPH_RADOS_API void rados_write_op_assert_version(rados_write_op_t write_op, uint64_t ver);
CEPH_RADOS_API void rados_write_op_cmpext(rados_write_op_t write_op,
                                          const char *cmp_buf,
                                          size_t cmp_len,
                                          uint64_t off,
                                          int *prval);
CEPH_RADOS_API void rados_write_op_omap_cmp(rados_write_op_t write_op,
                                            const char *key,
                                            uint8_t comparison_operator,
                                            const char *val,
                                            size_t val_len,
                                            int *prval);
CEPH_RADOS_API void rados_write_op_setxattr(rados_write_op_t write_op,
                                            const char *name,
                                            const char *value,
                                            size_t value_len);
CEPH_RADOS_API void rados_write_op_rmxattr(rados_write_op_t write_op,
                                           const char *name);
CEPH_RADOS_API void rados_write_op_create(rados_write_op_t write_op,
                                          int exclusive,
                                          const char* category);
CEPH_RADOS_API void rados_write_op_write(rados_write_op_t write_op,
                                         const char *buffer,
                                         size_t len,
                                         uint64_t offset);
CEPH_RADOS_API void rados_write_op_write_full(rados_write_op_t write_op,
                                              const char *buffer,
                                              size_t len);
CEPH_RADOS_API void rados_write_op_writesame(rados_write_op_t write_op,
                                             const char *buffer,
                                             size_t data_len,
                                             size_t write_len,
                                             uint64_t offset);
CEPH_RADOS_API void rados_write_op_append(rados_write_op_t write_op,
                                          const char *buffer,
                                          size_t len);
CEPH_RADOS_API void rados_write_op_remove(rados_write_op_t write_op);
CEPH_RADOS_API void rados_write_op_truncate(rados_write_op_t write_op,
                                            uint64_t offset);
CEPH_RADOS_API void rados_write_op_zero(rados_write_op_t write_op,
			                uint64_t offset,
			                uint64_t len);
CEPH_RADOS_API void rados_write_op_exec(rados_write_op_t write_op,
			                const char *cls,
			                const char *method,
			                const char *in_buf,
			                size_t in_len,
			                int *prval);
CEPH_RADOS_API void rados_write_op_omap_set(rados_write_op_t write_op,
                                            char const* const* keys,
                                            char const* const* vals,
                                            const size_t *lens,
                                            size_t num);
CEPH_RADOS_API void rados_write_op_omap_rm_keys(rados_write_op_t write_op,
                                                char const* const* keys,
                                                size_t keys_len);
CEPH_RADOS_API void rados_write_op_omap_rm_range2(rados_write_op_t write_op,
                                                  const char *key_begin,
                                                  size_t key_begin_len,
                                                  const char *key_end,
                                                  size_t key_end_len);
CEPH_RADOS_API void rados_write_op_omap_clear(rados_write_op_t write_op);
CEPH_RADOS_API int rados_write_op_operate(rados_write_op_t write_op,
			                  rados_ioctx_t io,
			                  const char *oid,
			                  time_t *mtime,
			                  int flags);
CEPH_RADOS_API int rados_aio_write_op_operate(rados_write_op_t write_op,
                                              rados_ioctx_t io,
                                              rados_completion_t completion,
                                              const char *oid,
                                              time_t *mtime,
			                      int flags);
CEPH_RADOS_API rados_read_op_t rados_create_read_op(void);
CEPH_RADOS_API void rados_release_read_op(rados_read_op_t read_op);
CEPH_RADOS_API void rados_read_op_set_flags(rados_read_op_t read_op, int flags);
CEPH_RADOS_API void rados_read_op_cmpext(rados_read_op_t read_op,
                                         const char *cmp_buf,
                                         size_t cmp_len,
                                         uint64_t off,
                                         int *prval);
CEPH_RADOS_API void rados_read_op_omap_get_vals2(rados_read_op_t read_op,
						 const char *start_after,
						 const char *filter_prefix,
						 uint64_t max_return,
						 rados_omap_iter_t *iter,
						 unsigned char *pmore,
						 int *prval);
CEPH_RADOS_API void rados_read_op_omap_get_keys2(rados_read_op_t read_op,
						 const char *start_after,
						 uint64_t max_return,
						 rados_omap_iter_t *iter,
						 unsigned char *pmore,
						 int *prval);
CEPH_RADOS_API void rados_read_op_omap_get_vals_by_keys(rados_read_op_t read_op,
                                                        char const* const* keys,
                                                        size_t keys_len,
                                                        rados_omap_iter_t *iter,
                                                        int *prval);
CEPH_RADOS_API int rados_read_op_operate(rados_read_op_t read_op,
			                 rados_ioctx_t io,
			                 const char *oid,
			                 int flags);
CEPH_RADOS_API int rados_aio_read_op_operate(rados_read_op_t read_op,
			                     rados_ioctx_t io,
			                     rados_completion_t completion,
			                     const char *oid,
			                     int flags);
CEPH_RADOS_API int rados_lock_exclusive(rados_ioctx_t io, const char * oid,
                                        const char * name, const char * cookie,
                                        const char * desc,
                                        struct timeval * duration,
                                        uint8_t flags);
CEPH_RADOS_API int rados_lock_shared(rados_ioctx_t io, const char * o,
                                     const char * name, const char * cookie,
                                     const char * tag, const char * desc,
	                             struct timeval * duration, uint8_t flags);
CEPH_RADOS_API int rados_unlock(rados_ioctx_t io, const char *o,
                                const char *name, const char *cookie);